GNOME Bugzilla – Bug 740113
Fix compilation warning
Last modified: 2014-11-17 10:49:35 UTC
data/grl-related-keys.c: In function 'grl_related_keys_get_boolean': data/grl-related-keys.c:474:419: warning: return makes integer from pointer without a cast [enabled by default] g_return_val_if_fail (GRL_IS_RELATED_KEYS (relkeys), NULL);
Created attachment 290704 [details] [review] Fix compilation warning
Review of attachment 290704 [details] [review]: Looks good.
Attachment 290704 [details] pushed as 5b865c8 - Fix compilation warning