Fix compilation warning

data/grl-related-keys.c: In function 'grl_related_keys_get_boolean':
data/grl-related-keys.c:474:419: warning: return makes integer from
pointer without a cast [enabled by default]
   g_return_val_if_fail (GRL_IS_RELATED_KEYS (relkeys), NULL);

https://bugzilla.gnome.org/show_bug.cgi?id=740113